tests/paczka1/small_fuzzy/58181621.err
Error in line 4: oLKPYPp S113 57,4
Error in line 8: RLM A652 92,70
Error in line 6: oLKPYPp S819 19,3
